--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -1,8 +1,67 @@
-.skills {
+.Skills {
     margin-top: 5vh;
     margin-left: 10vw;
     margin-right: 10vw;
     width: calc(100vw - 20vw);
-    height: 40vh;
-    background-color: var(--primary);
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Skills h1 {
+    color: #fff;
+    font-weight: 300;
+    font-size: 3.2vh;
+    letter-spacing: 2px;
+    line-height: 3.5vh;
+}
+
+.Skills-wrapper {
+    margin-top: 2vh;
+    display: flex;
+    gap: 1.2vh;
+}
+
+.Skill-card {
+    background: white;
+    height: 15vh;
+    aspect-ratio: 1/1;
+    border-radius: 1.2vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.Skill-card img {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 1.2vh;
+
+    transition: opacity 0.2s, transform 0.2s;
+}
+
+.Skill-card h1 {
+    position: absolute;
+
+    color: white;
+    font-size: 275%;
+    font-weight: 500;
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+
+    opacity: 0;
+    transition: opacity 0.2s, transform 0.2s;
+    transform: translateY(3vh);
+}
+
+.Skill-card:hover img {
+    opacity: 0;
+    transform: translateY(-5vh);
+}
+
+.Skill-card:hover h1 {
+    opacity: 1;
+    transform: translateY(0vh);
 }
